--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">FoodFinder</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Watson Eats</string>
+    <string name="action_settings">How it Works</string>
 </resources>
